--- a/src/bookstore/FXMLLogin.fxml
+++ b/src/bookstore/FXMLLogin.fxml
@@ -8,26 +8,28 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="567.0" prefWidth="592.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.FXMLLoginController">
+<AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="599.0" prefWidth="879.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.FXMLLoginController">
    <children>
-      <ImageView fx:id="imageView" fitHeight="567.0" fitWidth="552.0" layoutX="14.0" layoutY="-2.0" opacity="0.22" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="34.0" AnchorPane.topAnchor="-2.0" />
-      <Label layoutX="284.0" layoutY="21.0" prefHeight="35.0" prefWidth="114.0" text="Welcome" textFill="#1d8a31" AnchorPane.leftAnchor="282.0" AnchorPane.rightAnchor="204.0">
-         <font>
-            <Font size="24.0" />
-         </font></Label>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="328.0" layoutY="70.0" text="to" AnchorPane.leftAnchor="282.0" AnchorPane.rightAnchor="226.0" />
-      <Label layoutX="282.0" layoutY="97.0" text="FRIENDS" textFill="#128040" AnchorPane.leftAnchor="282.0" AnchorPane.rightAnchor="226.0">
-         <font>
-            <Font name="System Italic" size="24.0" />
-         </font>
-      </Label>
-      <Label alignment="CENTER" layoutX="325.0" layoutY="124.0" text="a" AnchorPane.leftAnchor="282.0" AnchorPane.rightAnchor="226.0" />
-      <Label alignment="CENTER" layoutX="282.0" layoutY="168.0" prefHeight="17.0" prefWidth="114.0" text="friendly book store" textFill="#4cd63a" AnchorPane.leftAnchor="282.0" AnchorPane.rightAnchor="204.0" />
-      <Button fx:id="Button1" layoutX="24.0" layoutY="503.0" mnemonicParsing="false" onAction="#signIn" prefHeight="25.0" prefWidth="60.0" text="Sign in" AnchorPane.leftAnchor="24.0" />
-      <Button fx:id="connectButton" layoutX="24.0" layoutY="528.0" mnemonicParsing="false" onAction="#connect" text="Connect" textAlignment="CENTER" AnchorPane.leftAnchor="24.0" />
-      <Button fx:id="exitButton" layoutX="521.0" layoutY="503.0" mnemonicParsing="false" onAction="#exit" prefHeight="25.0" prefWidth="52.0" text="Exit" AnchorPane.rightAnchor="27.0" />
-      <TextField fx:id="idText" layoutX="24.0" layoutY="259.0" onAction="#signIn" promptText="ID" AnchorPane.leftAnchor="24.0" />
-      <Label fx:id="labelMessages" alignment="CENTER" layoutX="54.0" layoutY="192.0" prefHeight="17.0" prefWidth="519.0" />
-      <PasswordField fx:id="passwordUser" layoutX="24.0" layoutY="284.0" onAction="#signIn" promptText="Password" AnchorPane.leftAnchor="24.0" />
+      <ImageView fx:id="imageView" fitHeight="599.0" fitWidth="991.0" layoutX="1.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="-113.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@TheBookStore.jpg" />
+         </image></ImageView>
+      <TextField fx:id="idText" layoutX="341.0" layoutY="219.0" minHeight="-Infinity" minWidth="-Infinity" onAction="#signIn" prefHeight="20.0" prefWidth="150.0" promptText="ID" AnchorPane.leftAnchor="341.0" />
+      <Label fx:id="labelMessages" alignment="CENTER" layoutX="157.0" layoutY="482.0" prefHeight="17.0" prefWidth="519.0" />
+      <PasswordField fx:id="passwordUser" layoutX="341.0" layoutY="257.0" minHeight="-Infinity" minWidth="-Infinity" onAction="#signIn" prefHeight="20.0" prefWidth="150.0" promptText="Password" AnchorPane.leftAnchor="341.0" />
+      <VBox alignment="CENTER" layoutX="359.0" layoutY="310.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="126.0" prefWidth="116.0" spacing="7.0">
+         <children>
+            <Button fx:id="Button1" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#signIn" prefHeight="31.0" prefWidth="112.0" text="Sign in">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+            <Button fx:id="exitButton" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#exit" prefHeight="30.0" prefWidth="112.0" text="Exit">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
