--- a/src/bookstore/FXMLMainPage.fxml
+++ b/src/bookstore/FXMLMainPage.fxml
@@ -1,17 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.effect.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.FXMLMainPage">
+<AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="574.0" prefWidth="595.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.FXMLMainPage">
    <children>
-      <Button fx:id="buttonEmployee" layoutX="227.0" layoutY="164.0" mnemonicParsing="false" onAction="#handleEmployeesButton" prefHeight="25.0" prefWidth="146.0" text="Employees page" AnchorPane.leftAnchor="227.0" AnchorPane.rightAnchor="227.0" />
-      <Button fx:id="buttonClient" layoutX="227.0" layoutY="188.0" mnemonicParsing="false" onAction="#handleClientsButton" prefHeight="25.0" prefWidth="146.0" text="Clients page" AnchorPane.leftAnchor="227.0" AnchorPane.rightAnchor="227.0" />
-      <Button fx:id="buttonBooks" layoutX="228.0" layoutY="213.0" mnemonicParsing="false" onAction="#handleBooksPage" prefHeight="25.0" prefWidth="145.0" text="Books page" AnchorPane.leftAnchor="228.0" AnchorPane.rightAnchor="226.0" />
-      <Button fx:id="buttonBack" layoutX="228.0" layoutY="238.0" mnemonicParsing="false" onAction="#handleGoBack" prefHeight="25.0" prefWidth="145.0" text="Back" AnchorPane.leftAnchor="228.0" AnchorPane.rightAnchor="226.0" />
-      <Button fx:id="buttonExit" layoutX="228.0" layoutY="263.0" mnemonicParsing="false" onAction="#handleQuitButton" prefHeight="25.0" prefWidth="145.0" text="Quit" AnchorPane.leftAnchor="228.0" AnchorPane.rightAnchor="226.0" />
+      <ImageView fitHeight="900.0" fitWidth="1600.0" layoutX="-5.0" layoutY="-13.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="-5.0">
+         <image>
+            <Image url="@menuPic.png" />
+         </image>
+      </ImageView>
+      <VBox alignment="CENTER" layoutX="191.0" layoutY="179.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="236.0" prefWidth="192.0" spacing="25.0">
+         <children>
+            <Button fx:id="buttonEmployee" mnemonicParsing="false" onAction="#handleEmployeesButton" prefHeight="25.0" prefWidth="146.0" text="Employees page" />
+            <Button fx:id="buttonClient" mnemonicParsing="false" onAction="#handleClientsButton" prefHeight="25.0" prefWidth="146.0" text="Clients page" />
+            <Button fx:id="buttonBooks" mnemonicParsing="false" onAction="#handleBooksPage" prefHeight="25.0" prefWidth="145.0" text="Books page" />
+            <Button fx:id="buttonBack" mnemonicParsing="false" onAction="#handleGoBack" prefHeight="25.0" prefWidth="145.0" text="Log out" />
+            <Button fx:id="buttonExit" mnemonicParsing="false" onAction="#handleQuitButton" prefHeight="25.0" prefWidth="145.0" text="Quit" />
+         </children>
+         <effect>
+            <DropShadow blurType="TWO_PASS_BOX" height="51.89" radius="25.075" spread="0.13" width="50.41" />
+         </effect>
+      </VBox>
+      <ImageView fitHeight="78.0" fitWidth="168.0" layoutX="17.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@TheBookstoreLOGO.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
