--- a/src/bookstore/FXMLPassword.fxml
+++ b/src/bookstore/FXMLPassword.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
@@ -15,6 +16,11 @@
       <Label layoutX="248.0" layoutY="158.0" text="Set your password" />
       <Label alignment="CENTER" layoutX="272.0" layoutY="55.0" text="Welcome" />
       <Label fx:id="labelName" alignment="CENTER" layoutX="202.0" layoutY="86.0" prefHeight="17.0" prefWidth="190.0" text="!!!" />
-      <Label fx:id="labelError" alignment="CENTER" contentDisplay="CENTER" layoutX="179.0" layoutY="263.0" prefHeight="17.0" prefWidth="235.0" text="Label" />
+      <Label fx:id="labelError" alignment="CENTER" contentDisplay="CENTER" layoutX="179.0" layoutY="263.0" prefHeight="17.0" prefWidth="235.0" />
+      <ImageView fitHeight="67.0" fitWidth="153.0" layoutX="14.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@TheBookstoreLOGO.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
