--- a/src/bookstore/FXMLBooksPage.fxml
+++ b/src/bookstore/FXMLBooksPage.fxml
@@ -32,14 +32,22 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <Button fx:id="sellBookButton" layoutX="402.0" layoutY="461.0" mnemonicParsing="false" onAction="#sellBookHandle" prefHeight="25.0" prefWidth="80.0" text="Sell" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="218.0" />
+      <Button fx:id="sellBookButton" layoutX="400.0" layoutY="461.0" mnemonicParsing="false" onAction="#sellBookHandle" prefHeight="25.0" prefWidth="103.0" text="Sell" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="197.0" />
       <Button fx:id="addBookButton" layoutX="14.0" layoutY="179.0" mnemonicParsing="false" onAction="#addBookHandle" prefHeight="25.0" prefWidth="103.0" text="Add a new book" AnchorPane.leftAnchor="14.0" />
       <Button fx:id="backButton" layoutX="14.0" layoutY="461.0" mnemonicParsing="false" onAction="#handleBackButton" prefHeight="25.0" prefWidth="68.0" text="Back" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" />
-      <Button fx:id="exitButton" layoutX="606.0" layoutY="461.0" mnemonicParsing="false" onAction="#handleExitButton" prefHeight="25.0" prefWidth="80.0" text="Exit" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
-      <TextField fx:id="searchText" layoutX="509.0" layoutY="47.0" prefHeight="25.0" prefWidth="97.0" promptText="Title,author..." AnchorPane.rightAnchor="94.0" AnchorPane.topAnchor="47.0" />
+      <TextField fx:id="searchText" layoutX="524.0" layoutY="43.0" prefHeight="25.0" prefWidth="103.0" promptText="Title,author..." AnchorPane.rightAnchor="96.0" AnchorPane.topAnchor="43.0" />
       <Label fx:id="labelDailyAmount" layoutX="14.0" layoutY="89.0" prefHeight="17.0" prefWidth="159.0" text="Daily amount" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="89.0" />
       <TextField fx:id="textFieldClientId" layoutX="200.0" layoutY="461.0" prefHeight="25.0" prefWidth="103.0" promptText="Client's ID" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="200.0" />
-      <MenuButton layoutX="606.0" layoutY="47.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="80.0" text="Search" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="47.0">
+      <Button fx:id="returnBookButton" layoutX="208.0" layoutY="179.0" mnemonicParsing="false" onAction="#returnButtonHandle" prefHeight="25.0" prefWidth="103.0" text="Return a book" AnchorPane.leftAnchor="208.0" />
+      <Label layoutX="277.0" layoutY="20.0" prefHeight="17.0" prefWidth="195.0" text="Current operation " AnchorPane.leftAnchor="277.0" AnchorPane.rightAnchor="228.0" AnchorPane.topAnchor="20.0" />
+      <Label fx:id="labelCurrentAmount" layoutX="14.0" layoutY="114.0" prefHeight="17.0" prefWidth="159.0" text="Current amount" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="527.0" AnchorPane.topAnchor="114.0" />
+      <Label layoutX="129.0" layoutY="465.0" text="Client's ID" AnchorPane.bottomAnchor="18.0" AnchorPane.leftAnchor="129.0" />
+      <Button fx:id="changeButton" layoutX="377.0" layoutY="179.0" mnemonicParsing="false" onAction="#handleChangeButton" prefHeight="25.0" prefWidth="103.0" text="Change" AnchorPane.leftAnchor="503.0" />
+      <TextArea fx:id="textAreaOperations" layoutX="277.0" layoutY="45.0" prefHeight="104.0" prefWidth="195.0" AnchorPane.leftAnchor="277.0" AnchorPane.topAnchor="45.0" />
+      <Label fx:id="labelError" layoutX="480.0" layoutY="12.0" prefHeight="17.0" prefWidth="205.0" text="Label" />
+      <Button fx:id="printButton" layoutX="503.0" layoutY="461.0" mnemonicParsing="false" onAction="#printButtonHandle" prefHeight="25.0" prefWidth="103.0" text="Print" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="94.0" />
+      <Button fx:id="refreshButton" layoutX="500.0" layoutY="67.0" mnemonicParsing="false" onAction="#refreshHandleButton" prefHeight="25.0" prefWidth="103.0" text="Refresh" AnchorPane.rightAnchor="97.0" AnchorPane.topAnchor="67.0" />
+      <MenuButton layoutX="604.0" layoutY="43.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="80.0" text="Search" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="43.0">
         <items>
           <MenuItem fx:id="searchISBNButton" mnemonicParsing="false" onAction="#searchISBNHandle" text="ISBN" />
           <MenuItem mnemonicParsing="false" onAction="#searchAuthorHandle" text="Author" />
@@ -57,13 +65,5 @@
             </MenuItem>
         </items>
       </MenuButton>
-      <Button fx:id="returnBookButton" layoutX="208.0" layoutY="179.0" mnemonicParsing="false" onAction="#returnButtonHandle" prefHeight="25.0" prefWidth="103.0" text="Return a book" AnchorPane.leftAnchor="208.0" />
-      <Label layoutX="277.0" layoutY="20.0" prefHeight="17.0" prefWidth="195.0" text="Current operation " AnchorPane.leftAnchor="277.0" AnchorPane.rightAnchor="228.0" AnchorPane.topAnchor="20.0" />
-      <Button fx:id="printButton" layoutX="606.0" layoutY="97.0" mnemonicParsing="false" onAction="#printButtonHandle" prefHeight="25.0" prefWidth="80.0" text="Print" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="97.0" />
-      <Label fx:id="labelCurrentAmount" layoutX="14.0" layoutY="114.0" prefHeight="17.0" prefWidth="159.0" text="Current amount" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="527.0" AnchorPane.topAnchor="114.0" />
-      <Label layoutX="129.0" layoutY="465.0" text="Client's ID" AnchorPane.bottomAnchor="18.0" AnchorPane.leftAnchor="129.0" />
-      <Button fx:id="changeButton" layoutX="377.0" layoutY="179.0" mnemonicParsing="false" onAction="#handleChangeButton" prefHeight="25.0" prefWidth="103.0" text="Change" AnchorPane.rightAnchor="220.0" />
-      <TextArea fx:id="textAreaOperations" layoutX="277.0" layoutY="45.0" prefHeight="104.0" prefWidth="216.0" AnchorPane.leftAnchor="277.0" AnchorPane.rightAnchor="207.0" AnchorPane.topAnchor="45.0" />
-      <Label fx:id="labelError" layoutX="480.0" layoutY="20.0" prefHeight="17.0" prefWidth="205.0" text="Label" />
    </children>
 </AnchorPane>
