--- a/src/bookstore/FXMLEmployeesPage.fxml
+++ b/src/bookstore/FXMLEmployeesPage.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.FXMLEmployeesPageController">
+<AnchorPane id="AnchorPane" prefHeight="599.0" prefWidth="879.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bookstore.FXMLEmployeesPageController">
     <children>
       <ImageView fitHeight="67.0" fitWidth="153.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -20,8 +20,7 @@
                 <Button fx:id="button4" mnemonicParsing="false" onAction="#handleNewButton" prefHeight="25.0" prefWidth="102.0" text="New" />
                 <Button fx:id="button5" mnemonicParsing="false" onAction="#handleDeleteButton" prefHeight="25.0" prefWidth="101.0" text="Delete" />
             <Button fx:id="printButton" mnemonicParsing="false" onAction="#handlePrintButton" prefHeight="25.0" prefWidth="101.0" text="Print" />
-                <Button fx:id="button1" mnemonicParsing="false" onAction="#handleGoBack" prefHeight="25.0" prefWidth="101.0" text="Go back" />
-                <Button fx:id="buttonClose" mnemonicParsing="false" onAction="#handleQuitButton" prefHeight="25.0" prefWidth="100.0" text="Close" />
+                <Button fx:id="button1" mnemonicParsing="false" onAction="#handleGoBack" prefHeight="25.0" prefWidth="101.0" text="Back" />
             </children>
         </VBox>
         <VBox layoutX="290.0" layoutY="27.0" prefHeight="195.0" prefWidth="76.0" AnchorPane.leftAnchor="290.0">
@@ -36,11 +35,11 @@
                 <Button fx:id="buttonRegister" mnemonicParsing="false" onAction="#handleRegisterButton" prefHeight="25.0" prefWidth="200.0" text="Register" />
             </children>
         </VBox>
-      <Label fx:id="labelError" alignment="CENTER" layoutX="386.0" layoutY="13.0" prefHeight="17.0" prefWidth="200.0" text="Label" />
+      <Label fx:id="labelError" alignment="CENTER" layoutX="386.0" layoutY="13.0" prefHeight="17.0" prefWidth="429.0" text="Label" />
       <Button fx:id="changeButton" layoutX="386.0" layoutY="34.0" mnemonicParsing="false" onAction="#handleChangeButton" prefHeight="25.0" prefWidth="200.0" text="Change" AnchorPane.leftAnchor="386.0" AnchorPane.rightAnchor="14.0" />
       <TextArea fx:id="textViewActivity" layoutX="386.0" layoutY="80.0" prefHeight="93.0" prefWidth="200.0" AnchorPane.leftAnchor="386.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="80.0" />
-      <Button fx:id="viewActivityButton" layoutX="386.0" layoutY="55.0" mnemonicParsing="false" onAction="#handleViewActivityButton" prefHeight="25.0" prefWidth="200.0" text="View Activity" AnchorPane.leftAnchor="386.0" AnchorPane.rightAnchor="14.0" />
-      <TableView fx:id="tableEmployees" layoutX="5.0" layoutY="221.0" prefHeight="177.0" prefWidth="594.0" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="221.0">
+      <Button fx:id="viewActivityButton" layoutX="386.0" layoutY="55.0" mnemonicParsing="false" onAction="#handleViewActivityButton" prefHeight="25.0" prefWidth="200.0" text="View activity of one employee" AnchorPane.leftAnchor="386.0" AnchorPane.rightAnchor="14.0" />
+      <TableView fx:id="tableEmployees" layoutX="5.0" layoutY="228.0" prefHeight="369.0" prefWidth="873.0" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="228.0">
         <columns>
           <TableColumn prefWidth="28.0" text="C1" visible="false" />
         </columns>
@@ -48,7 +47,7 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <Button fx:id="graphicButton" layoutX="436.0" layoutY="173.0" mnemonicParsing="false" onAction="#graphicEmployeesHandler" prefHeight="25.0" prefWidth="200.0" text="Graphic" AnchorPane.rightAnchor="14.0" />
+      <Button fx:id="graphicButton" layoutX="436.0" layoutY="173.0" mnemonicParsing="false" onAction="#graphicEmployeesHandler" prefHeight="25.0" prefWidth="200.0" text="Graphic of all employees activities" AnchorPane.leftAnchor="386.0" AnchorPane.rightAnchor="14.0" />
       <VBox layoutX="190.0" layoutY="27.0" prefHeight="200.0" prefWidth="100.0">
          <children>
             <Label prefHeight="27.0" prefWidth="100.0" text="Last Name" />
